--- a/style/style.css
+++ b/style/style.css
@@ -6,12 +6,17 @@
 
 ul {
   margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+p {
+  margin: 0;
 }
 
 body {
@@ -85,6 +90,7 @@ body {
 }
 
 .bike__title {
+  padding-top: 50px;
   font-weight: 700;
   font-size: 64px;
   line-height: 77px;
@@ -152,6 +158,200 @@ body {
 
 .bike-slider__item {}
 
-.bike-list {}
+.bike-list {
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-around;
 
-.bike__list-item {}
+}
+
+.bike__list-item { 
+  max-width: 160px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  min-height: 58px;
+}
+
+.bike__list-num {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.bike__list-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  margin: auto 0;
+}
+
+
+/* info */
+
+.info {
+  margin-bottom: 150px;
+}
+
+.info__inner {
+  display: flex;
+}
+
+.info__img {
+  margin-right: 60px;
+  flex-basis: 570px;
+  object-fit: cover;
+}
+.info__list {
+  flex-basis: 490px;
+}
+
+.info__item + .info__item {
+  padding-top: 30px;
+}
+
+.info___item-title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  margin: 0 0 10px;
+}
+
+.info__item-text {
+  max-width: 450px;
+}
+
+
+/* characteristics */
+
+
+.characteristics {
+  margin-bottom: 150px;
+}
+
+.characteristics__head {
+  margin: 0 0 40px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+}
+
+.characteristics__inner {
+  display: flex;
+}
+
+.characteristics__items {
+  flex-basis: 570px;
+  margin-right: 60px;
+}
+
+.characteristics__list + .characteristics__list {
+  padding-top: 30px;
+}
+
+.characteristics__title {
+  padding: 2px 0 3px;
+  text-transform: uppercase;
+  background-color: #131313;
+  color: #fff;
+  font-weight: 700;  
+}
+
+.characteristics__line {
+  display: flex;
+  padding-top: 5px;
+}
+
+.characteristics__name {
+  flex-basis: 285px;
+  padding-right: 25px;
+}
+
+.characteristics__descr {
+  flex-basis: 285px;
+}
+
+.characteristics__img {
+  align-self: center;
+}
+
+
+/* slider */
+
+
+.slider {
+  margin-bottom: 50px;
+}
+
+.slider__items .slick-dots {
+  top: 0;
+  left: 0;
+}
+
+.sleder__item {
+  padding-left: 50px;
+}
+
+
+
+/* price */
+
+
+.price {
+  margin-bottom: 100px;
+}
+
+.price__inner {}
+
+.form {
+
+}
+
+.form__title {
+  margin-bottom: 40px;
+}
+
+.form__text {
+  max-width: 300px;
+  margin-bottom: 30px;
+}
+
+.form__input-name,
+.form__input-phone {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #131313;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.form__input-name::placeholder,
+.form__input-phone::placeholder,
+.form__input-text{
+  color: #6f6f6f;
+  opacity: 0.5;
+}
+
+.form__label-box {}
+
+.form__label {}
+
+.form__input-radio {}
+
+.form__bike {}
+
+.form__bike-img {}
+
+.form__bike-price {}
+
+.form__radio-style {}
+
+.form__radio-style--grey {}
+
+.form__radio-style--white {}
+
+.form__radio-style--red {}
+
+.form__btn {}
